# SMHMI

./: .gitignore  .gitmodules  .project  README.MD  README.md  SW-Content-Register.txt  Smart HMI solution release notes.md
DSMT_Models/: INTERNAL_ONLY_DO_NOT_SHARE_OUTSIDE_NXP.txt
bootloader/: .cproject  script.jlink
bootloader/source/: bootloader.c  disk.c  fica_definition.h  flash_ica_driver.c  flash_ica_driver.h  main.c  sln_encrypt.c  sln_flash_remap.c  sln_msc_vfs.c  sln_msc_vfs.h  sln_update.c  sln_update.h
coffee_machine/: README.MD
coffee_machine/cm4/: .cproject
coffee_machine/cm7/: .cproject
coffee_machine/lvgl_vglite_lib/: .cproject
docs/source/: DITA_map.ditamap  application_resource_build.dita  customization.dita  how_to_develop_user_app.dita  how_to_develop_user_app.md  how_to_develop_user_app_intr.dita  introduction.dita  introduction.md  over_the_air.dita  over_the_air.md  over_the_air_update.dita  resource_build.dita  resource_build.md  setup_and_install.dita  setup_and_install.md  vit_speech_instructions.dita  vit_speech_instructions.md
elevator/cm4/: .cproject
elevator/cm7/: .cproject
elevator/lvgl_vglite_lib/: .cproject
framework/core/: fwk_audio_processing.c  fwk_camera_manager.c  fwk_config.c  fwk_display_manager.c  fwk_flash.c  fwk_graphics.c  fwk_input_manager.c  fwk_lpm_manager.c  fwk_output_manager.c  fwk_task.c  fwk_timer.c
framework/docs/: framework.dita  introduction.dita  introduction.md  (+2 more)
home_panel/: .project  README.MD
tools/audio_dump/: CMakeLists.txt  parse_audio_runtime_info.cpp  parse_audio_streams.py
(+407 files in other folders)
